--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,16 +2,23 @@
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
+
+# Enable mouse support
+set-option -g mouse on
+
+# Start copy mode when scrolling up
+bind -n WheelUpPane copy-mode
+
 # Pane switching with Alt+arrow
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-bind -n C-h run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+#bind -n C-h run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+#bind -n C-j run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+#bind -n C-k run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+#bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
 # Activity Monitoring
 setw -g monitor-activity on
@@ -19,6 +26,9 @@ set -g visual-activity on
 
 # Pane Switching Using Mouse
 set-option -g mouse-select-pane on
+
+# Window Switching Using Mouse
+set-option -g mouse-select-window on
 
 # Bind Layout configuration file
 #bind -D source-file ~/.tmux.layout
