--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,22 +3,26 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# Enable mouse support
-set-option -g mouse on
-
-# Start copy mode when scrolling up
-bind -n WheelUpPane copy-mode
-
 # Pane switching with Alt+arrow
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+#bind -n M-Left select-pane -L
+#bind -n M-Right select-pane -R
+#bind -n M-Up select-pane -U
+#bind -n M-Down select-pane -D
 
-#bind -n C-h run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-#bind -n C-j run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-#bind -n C-k run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-#bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+
+# Smart pane switching with awareness of vim splits
+# # See: https://github.com/christoomey/vim-tmux-navigator
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Split
+bind h split-window -h # Split panes horizontal
+bind v split-window -v # Split panes vertically
 
 # Activity Monitoring
 setw -g monitor-activity on
@@ -27,8 +31,6 @@ set -g visual-activity on
 # Pane Switching Using Mouse
 set-option -g mouse-select-pane on
 
-# Window Switching Using Mouse
-set-option -g mouse-select-window on
-
 # Bind Layout configuration file
 #bind -D source-file ~/.tmux.layout
+
