Moved hidden file

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,9 +28,17 @@ bind v split-window -v # Split panes vertically
 setw -g monitor-activity on
 set -g visual-activity on
 
+# Center the window list
+set -g status-justify centre
+
 # Pane Switching Using Mouse
 set-option -g mouse-select-pane on
 
+# Mouse support - set to on if you want to use the mouse
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
 # Bind Layout configuration file
 #bind -D source-file ~/.tmux.layout
-
