--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,13 +1,21 @@
+# utf8
+set -g utf8 on
+set -g status-utf8 on
+
 # Change Prefix
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# Pane switching with Alt+arrow
-#bind -n M-Left select-pane -L
-#bind -n M-Right select-pane -R
-#bind -n M-Up select-pane -U
-#bind -n M-Down select-pane -D
+set -g default-terminal "xterm-256color"
+
+
+###
+# Keybindings
+###
+
+# Reload configuration
+bind r source-file ~/.tmux.conf
 
 bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
@@ -21,8 +29,17 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Split
+unbind %
+unbind '"'
+unbind o
 bind h split-window -h # Split panes horizontal
 bind v split-window -v # Split panes vertically
+
+# Resize
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 
 # Activity Monitoring
 setw -g monitor-activity on
@@ -30,9 +47,6 @@ set -g visual-activity on
 
 # Center the window list
 set -g status-justify centre
-
-# Pane Switching Using Mouse
-set-option -g mouse-select-pane on
 
 # Mouse support - set to on if you want to use the mouse
 setw -g mode-mouse on
@@ -42,3 +56,32 @@ set -g mouse-select-window on
 
 # Bind Layout configuration file
 #bind -D source-file ~/.tmux.layout
+
+##
+### Appearance
+###
+
+## Status bar
+set -g status-position bottom
+set -g status-interval 4
+set -g status-left ''
+set -g status-right ''
+set -g status-justify centre # center align window list
+
+setw -g status-bg default
+setw -g window-status-current-bg default
+setw -g window-status-current-fg default
+setw -g window-status-bg default
+setw -g window-status-fg white
+setw -g window-status-format '#[bg=black]#[fg=black,bold] #I #[bg=default] #[fg=black]#W  '
+setw -g window-status-current-format '#[fg=white]#[bg=cyan] #I #[fg=cyan]#[bg=default] #W  '
+
+## Panel borders
+set -g pane-active-border-fg cyan
+set -g pane-active-border-bg default
+set -g pane-border-fg black
+set -g pane-border-bg default
+
+## Message text
+set-option -g message-bg default
+set-option -g message-fg default
