urxvt vwheel plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,16 @@ bind C-a send-prefix
 
 set -g default-terminal "xterm-256color"
 
+# Limit history buffer
+set-option -g history-limit 1024
+
+
+###
+# Window options
+###
+set-window-option -g utf8 on
+set-window-option -g monitor-activity on
+
 
 ###
 # Keybindings
@@ -45,9 +55,6 @@ bind L resize-pane -R 5
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Center the window list
-set -g status-justify centre
-
 # Mouse support - set to on if you want to use the mouse
 setw -g mode-mouse on
 set -g mouse-select-pane on
@@ -74,7 +81,7 @@ setw -g window-status-current-fg default
 setw -g window-status-bg default
 setw -g window-status-fg white
 setw -g window-status-format '#[bg=black]#[fg=black,bold] #I #[bg=default] #[fg=black]#W  '
-setw -g window-status-current-format '#[fg=white]#[bg=cyan] #I #[fg=cyan]#[bg=default] #W  '
+setw -g window-status-current-format '#[fg=white]#[bg=green] #I #[fg=green]#[bg=default] #W  '
 
 ## Panel borders
 set -g pane-active-border-fg cyan
