--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,7 +56,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Mouse support - set to on if you want to use the mouse
-setw -g mode-mouse on
+setw -g mode-mouse off
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
