Tmux default-terminal set to screen-256color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # Limit history buffer
 set-option -g history-limit 1024
