Minor changes in tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,6 @@
+# Set Zsh as the default Tmux shell
+set-option -g default-shell /usr/bin/zsh
+
 # utf8
 set -g utf8 on
 set -g status-utf8 on
@@ -7,25 +10,34 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+#set-option -g xterm-keys on
 
 # Limit history buffer
 set-option -g history-limit 1024
 
+# Start Numbering at 1
+set -g base-index 1
 
 ###
 # Window options
 ###
 set-window-option -g utf8 on
 set-window-option -g monitor-activity on
+# Renumber windows when a window is closed
+set -g renumber-windows on
 
 
 ###
 # Keybindings
 ###
 
+# End, Home keys workaround fix under tmux + zsh + urxvt
+#bind -n End send-key C-e
+#bind -n Home send-key C-a
+
 # Reload configuration
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display " Tmux Conf Reloaded!"
 
 bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
