--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,7 +10,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 #set-option -g xterm-keys on
 
 # Limit history buffer
