--- a/terminator/config
+++ b/terminator/config
@@ -78,7 +78,7 @@
     copy_on_selection = True
     cursor_color = "#00c409"
     custom_command = tmux -2
-    font = Hack 9
+    font = DejaVu Sans Mono, Awesome 8
     foreground_color = "#ffffff"
     palette = "#181915:#7a0137:#498702:#c5bb63:#3465a4:#75507b:#4194b0:#d3d7cf:#45473c:#e00265:#6dca04:#e6db74:#1589ff:#af5fff:#5cd1f8:#ffffff"
     scroll_on_output = False
