--- a/terminator/config
+++ b/terminator/config
@@ -81,7 +81,7 @@
     /*custom_command = tmux -2*/
     font = DejaVu Sans Mono, Awesome 8
     foreground_color = "#ffffff"
-    palette = "#202020:#990000:#66aa11:#ffff4c:#30309b:#7e40a5:#3579a8:#f0f0f0:#303030:#ff0090:#80ff00:#ffff4c:#5f5fee:#bb88dd:#4eb4fa:#f0f0f0"
+    palette = "#202020:#990000:#00cd00:#ffff4c:#30309b:#7e40a5:#3579a8:#f0f0f0:#303030:#ff0090:#80ff00:#ffff4c:#5f5fee:#bb88dd:#4eb4fa:#f0f0f0"
     scroll_on_output = False
     scrollback_infinite = True
     urgent_bell = True
