--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Set Zsh as the default Tmux shell
-set-option -g default-shell /usr/bin/zsh
+set -g default-shell /bin/zsh
+set -g default-command /bin/zsh
 
 # utf8
 set -g utf8 on
@@ -18,6 +19,12 @@ set-option -g history-limit 1024
 
 # Start Numbering at 1
 set -g base-index 1
+
+# history
+set -g history-limit 4096
+
+# allow terminal scrolling
+set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 ###
 # Window options
@@ -63,6 +70,10 @@ bind J resize-pane -D 5
 bind K resize-pane -U 5
 bind L resize-pane -R 5
 
+# Kill window
+bind X kill-window
+bind Q kill-session
+
 # Activity Monitoring
 setw -g monitor-activity on
 set -g visual-activity on
@@ -92,8 +103,10 @@ setw -g window-status-current-bg default
 setw -g window-status-current-fg default
 setw -g window-status-bg default
 setw -g window-status-fg white
-setw -g window-status-format '#[bg=black]#[fg=black,bold] #I #[bg=default] #[fg=black]#W  '
-setw -g window-status-current-format '#[fg=white]#[bg=green] #I #[fg=green]#[bg=default] #W  '
+setw -g window-status-format '#[bg=red]#[fg=black,bold] #I #[bg=default] #[fg=black]#W  '
+setw -g window-status-current-format '#[fg=black]#[bg=yellow] #I #[fg=yellow]#[bg=black] #W  '
+set -g status-right '#[fg=brightblue]ßÜ #[fg=brightyellow]#(tmux_upspeed)/#(tmux_downspeed) #[fg=colour7]| #[fg=brightblue]ª #[fg=brightyellow]#(sensors | #[fg=brightblue]ï #[fg=brightyellow]#(acpi -b | cut -d" " -f4 | cut -d"%" -f1) #[fg=colour7]| #[fg=brightred]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=colour7]| #[fg=brightgreen]%a %H:%M'
+
 
 ## Panel borders
 set -g pane-active-border-fg cyan
