vi-like navigation keybindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,17 +14,23 @@ bind C-a send-prefix
 set -g default-terminal "screen-256color"
 #set-option -g xterm-keys on
 
-# Limit history buffer
-set-option -g history-limit 1024
-
 # Start Numbering at 1
 set -g base-index 1
 
 # history
 set -g history-limit 4096
 
+# Faster command sequences
+set -s escape-time 0
+
+# Set aggressive resize when multiple clients attach to a session
+setw -g aggressive-resize on
+
 # allow terminal scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# vi-like navigation bindings
+set-window-option -g mode-keys vi
 
 ###
 # Window options
@@ -39,9 +45,17 @@ set -g renumber-windows on
 # Keybindings
 ###
 
+# Switch to Last active window
+bind-key a last-window
+
 # End, Home keys workaround fix under tmux + zsh + urxvt
 #bind -n End send-key C-e
 #bind -n Home send-key C-a
+
+# vi visual mode
+bind-key -t vi-copy 'v' begin-selection
+# vi copy selection
+bind-key -t vi-copy 'y' copy-selection
 
 # Reload configuration
 bind r source-file ~/.tmux.conf \; display " Tmux Conf Reloaded!"
@@ -62,7 +76,7 @@ unbind %
 unbind '"'
 unbind o
 bind h split-window -h # Split panes horizontal
-bind v split-window -v # Split panes vertically
+bind j split-window -v # Split panes vertically
 
 # Resize
 bind H resize-pane -L 5
