xterm navigation keybindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,7 +12,7 @@ set -g prefix C-a
 bind C-a send-prefix
 
 set -g default-terminal "screen-256color"
-#set-option -g xterm-keys on
+set-option -g xterm-keys on
 
 # Start Numbering at 1
 set -g base-index 1
@@ -52,6 +52,7 @@ bind-key a last-window
 #bind -n End send-key C-e
 #bind -n Home send-key C-a
 
+unbind v
 # vi visual mode
 bind-key -t vi-copy 'v' begin-selection
 # vi copy selection
@@ -75,6 +76,7 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 unbind %
 unbind '"'
 unbind o
+unbind j
 bind h split-window -h # Split panes horizontal
 bind j split-window -v # Split panes vertically
 
