--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
 set-option -g xterm-keys on
 
@@ -32,13 +33,31 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # vi-like navigation bindings
 set-window-option -g mode-keys vi
 
-###
+# ---------------------
 # Window options
-###
+# ---------------------
 set-window-option -g utf8 on
 set-window-option -g monitor-activity on
 # Renumber windows when a window is closed
 set -g renumber-windows on
+
+# ---------------------
+# Copy & Paste
+# ---------------------
+# provide access to the clipboard for pbpaste, pbcopy
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-window-option -g automatic-rename on
+# use vim keybindings in copy mode
+setw -g mode-keys vi
+# setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# update default binding of 'Enter' to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 
 
 ###
@@ -47,16 +66,6 @@ set -g renumber-windows on
 
 # Switch to Last active window
 bind-key a last-window
-
-# End, Home keys workaround fix under tmux + zsh + urxvt
-#bind -n End send-key C-e
-#bind -n Home send-key C-a
-
-unbind v
-# vi visual mode
-bind-key -t vi-copy 'v' begin-selection
-# vi copy selection
-bind-key -t vi-copy 'y' copy-selection
 
 # Reload configuration
 bind r source-file ~/.tmux.conf \; display " Tmux Conf Reloaded!"
@@ -90,46 +99,55 @@ bind L resize-pane -R 5
 bind X kill-window
 bind Q kill-session
 
-# Activity Monitoring
-setw -g monitor-activity on
-set -g visual-activity on
-
 # Mouse support - set to on if you want to use the mouse
 setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 
-# Bind Layout configuration file
-#bind -D source-file ~/.tmux.layout
+# ----------------------
+# set some pretty colors
+# ----------------------
+# set pane colors - hilight the active pane
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
 
-##
-### Appearance
-###
+# colorize messages in the command line
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
 
-## Status bar
-set -g status-position bottom
-set -g status-interval 4
-set -g status-left ''
-set -g status-right ''
-set -g status-justify centre # center align window list
+# ----------------------
+# Status Bar
+# -----------------------
+set-option -g status on                # turn the status bar on
+set -g status-utf8 on                  # set utf-8 for the status bar
+set -g status-interval 5               # set update frequencey (default 15 seconds)
+set -g status-justify centre           # center window list for clarity
+# set-option -g status-position top    # position the status bar at top of screen
 
-setw -g status-bg default
-setw -g window-status-current-bg default
-setw -g window-status-current-fg default
-setw -g window-status-bg default
-setw -g window-status-fg white
-setw -g window-status-format '#[bg=red]#[fg=black,bold] #I #[bg=default] #[fg=black]#W  '
-setw -g window-status-current-format '#[fg=black]#[bg=yellow] #I #[fg=yellow]#[bg=black] #W  '
-set -g status-right '#[fg=brightblue]ßÜ #[fg=brightyellow]#(tmux_upspeed)/#(tmux_downspeed) #[fg=colour7]| #[fg=brightblue]ª #[fg=brightyellow]#(sensors | #[fg=brightblue]ï #[fg=brightyellow]#(acpi -b | cut -d" " -f4 | cut -d"%" -f1) #[fg=colour7]| #[fg=brightred]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=colour7]| #[fg=brightgreen]%a %H:%M'
+# visual notification of activity in other windows
+setw -g monitor-activity on
+set -g visual-activity on
 
+# set color for status bar
+set-option -g status-bg colour235 #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr dim 
 
-## Panel borders
-set -g pane-active-border-fg cyan
-set -g pane-active-border-bg default
-set -g pane-border-fg black
-set -g pane-border-bg default
+# set window list colors - red for active and cyan for inactive
+set-window-option -g window-status-fg colour236 #base0
+set-window-option -g window-status-bg cyan 
+set-window-option -g window-status-attr dim
 
-## Message text
-set-option -g message-bg default
-set-option -g message-fg default
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg colour236 
+set-window-option -g window-status-current-attr bright
+
+# show host name and IP address on left side of status bar
+set -g status-left-length 70
+set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}') #(ifconfig eth1 | grep 'inet ' | awk '{print \"eth1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+
+# show session name, window & pane number, date and time on right side of
+# status bar
+set -g status-right-length 60
+set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
