--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,9 +30,6 @@ setw -g aggressive-resize on
 # allow terminal scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# vi-like navigation bindings
-set-window-option -g mode-keys vi
-
 # ---------------------
 # Window options
 # ---------------------
@@ -45,8 +42,10 @@ set -g renumber-windows on
 # Copy & Paste
 # ---------------------
 # provide access to the clipboard for pbpaste, pbcopy
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-set-window-option -g automatic-rename on
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-window-option -g automatic-rename off
+# don't rename windows automatically
+set-option -g allow-rename off
 # use vim keybindings in copy mode
 setw -g mode-keys vi
 # setup 'v' to begin selection as in Vim
@@ -85,9 +84,8 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 unbind %
 unbind '"'
 unbind o
-unbind j
 bind h split-window -h # Split panes horizontal
-bind j split-window -v # Split panes vertically
+bind v split-window -v # Split panes vertically
 
 # Resize
 bind H resize-pane -L 5
@@ -150,4 +148,4 @@ set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 60
-set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
+set -g status-right "#[fg=cyan]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
