--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -106,13 +106,18 @@ set -g mouse-select-window on
 # ----------------------
 # set some pretty colors
 # ----------------------
-# set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+# panes
+ #set pane colors - hilight the active pane
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
+#set-option -g pane-border-fg colour235 #base02
+#set-option -g pane-active-border-fg colour240 #base01
 
-# colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
 
 # ----------------------
 # Status Bar
@@ -122,30 +127,34 @@ set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
+set-option -g status-justify centre
+
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
 
 # set color for status bar
-set-option -g status-bg colour235 #base02
-set-option -g status-fg yellow #yellow
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
 set-option -g status-attr dim 
+set-option -g status-attr bright
 
 # set window list colors - red for active and cyan for inactive
-set-window-option -g window-status-fg colour236 #base0
-set-window-option -g window-status-bg cyan 
-set-window-option -g window-status-attr dim
-
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg colour236 
-set-window-option -g window-status-current-attr bright
+setw -g window-status-current-bg colour226
+setw -g window-status-current-fg colour232
+setw -g window-status-current-attr dim
+setw -g window-status-bg colour237
+setw -g window-status-fg colour51
+setw -g window-status-current-attr bright
+setw -g window-status-attr bright
 
 # show host name and IP address on left side of status bar
-set -g status-left-length 70
-set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}') #(ifconfig eth1 | grep 'inet ' | awk '{print \"eth1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+set -g status-left-length 120
+set -g status-left "#[fg=white]:: #[fg=magenta]#(who | cut -d \" \" -f1) #[fg=white]:: #[fg=green]#H #[fg=white]:: #[fg=yellow] #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 -> \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
 # show session name, window & pane number, date and time on right side of
 # status bar
-set -g status-right-length 60
-set -g status-right "#[fg=cyan]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
+set -g status-right-length 120
+set -g status-right "#[fg=cyan]#S #I:#P #[fg=white]:: #[fg=yellow]%d %b %Y #[fg=white]:: #[fg=green]%l:%M:%S %p #[fg=white]::"
