--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,12 @@
+##
+#   Configuration for tmux version 2.1+
+##
+
+
 # Set Zsh as the default Tmux shell
 set -g default-shell /bin/zsh
 set -g default-command /bin/zsh
 
-# utf8
-set -g utf8 on
-set -g status-utf8 on
 
 # Change Prefix
 unbind C-b
@@ -12,8 +14,8 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # make tmux display things in 256 colors
-set -g default-terminal "screen-256color"
-set-option -g xterm-keys on
+set -g default-terminal "screen-#256color"
+set-option -gw xterm-keys on
 
 # Start Numbering at 1
 set -g base-index 1
@@ -33,7 +35,6 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # ---------------------
 # Window options
 # ---------------------
-set-window-option -g utf8 on
 set-window-option -g monitor-activity on
 # Renumber windows when a window is closed
 set -g renumber-windows on
@@ -84,8 +85,15 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 unbind %
 unbind '"'
 unbind o
-bind h split-window -h # Split panes horizontal
-bind v split-window -v # Split panes vertically
+bind \ split-window -h # Split panes horizontal
+bind - split-window -v # Split panes vertically
+
+#urxvt tab like window switching (-n: no prior escape seq)
+bind down new-window
+bind left prev
+bind right next
+#bind -n C-left swap-window -t -1
+#bind -n C-right swap-window -t +1
 
 # Resize
 bind H resize-pane -L 5
@@ -98,10 +106,12 @@ bind X kill-window
 bind Q kill-session
 
 # Mouse support - set to on if you want to use the mouse
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
+bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+# Scroll an entire page instead of just a line.
+bind -t vi-copy    WheelUpPane   page-up
+bind -t vi-copy    WheelDownPane page-down
 
 # ----------------------
 # set some pretty colors
@@ -123,11 +133,9 @@ set -g message-command-bg black
 # Status Bar
 # -----------------------
 set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
-set-option -g status-justify centre
 
 
 # visual notification of activity in other windows
@@ -138,23 +146,26 @@ set -g visual-activity on
 set -g status-bg default
 set -g status-fg colour12
 set -g status-interval 2
-set-option -g status-attr dim 
+set-option -g status-attr dim
 set-option -g status-attr bright
 
-# set window list colors - red for active and cyan for inactive
-setw -g window-status-current-bg colour226
-setw -g window-status-current-fg colour232
+# Window status
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#[fg=yellow]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=brightyellow]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-current-bg colour0
+setw -g window-status-current-fg colour11
 setw -g window-status-current-attr dim
-setw -g window-status-bg colour237
-setw -g window-status-fg colour51
-setw -g window-status-current-attr bright
-setw -g window-status-attr bright
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
 
 # show host name and IP address on left side of status bar
 set -g status-left-length 120
-set -g status-left "#[fg=white]:: #[fg=magenta]#(who | cut -d \" \" -f1) #[fg=white]:: #[fg=green]#H #[fg=white]:: #[fg=yellow] #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 -> \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+set -g status-left "#[fg=magenta,bg=black,bold]#(echo ${USER}) #[fg=white]:: #[fg=green]#H"
 
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 120
-set -g status-right "#[fg=cyan]#S #I:#P #[fg=white]:: #[fg=yellow]%d %b %Y #[fg=white]:: #[fg=green]%l:%M:%S %p #[fg=white]::"
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
