--- a/terminator/config
+++ b/terminator/config
@@ -1,81 +1,82 @@
 [global_config]
+  borderless = True
   enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
-  always_split_with_profile = True
-  sticky = True
-  always_on_top = True
-  suppress_multiple_term_dialog = True
-  hide_from_taskbar = True
-  tab_position = bottom
+  suppress_multiple_term_dialog = False
+  title_hide_sizetext = False
+  title_use_system_font = False
 [keybindings]
-  cycle_prev = None
-  next_tab = None
-  close_window = None
-  group_tab = None
-  move_tab_right = None
-  resize_left = None
   broadcast_all = None
-  rotate_ccw = None
-  reset_clear = None
-  go_right = None
-  new_tab = None
-  resize_right = None
-  resize_down = None
-  toggle_zoom = None
-  scaled_zoom = None
-  zoom_in = None
-  group_all = None
-  full_screen = None
-  prev_tab = None
-  split_vert = None
-  ungroup_all = None
+  broadcast_group = None
   broadcast_off = None
-  ungroup_tab = None
+  close_term = None
+  close_window = None
+  copy = <Control><Shift>c
+  cycle_next = None
+  cycle_prev = None
+  edit_window_title = None
+  full_screen = None
+  go_down = None
+  go_left = None
+  go_next = None
+  go_prev = None
+  go_right = None
+  go_up = None
+  group_all = None
+  group_tab = None
+  hide_window = None
   insert_number = None
   insert_padded = None
-  zoom_out = None
-  broadcast_group = None
-  go_prev = None
-  close_term = None
-  new_terminator = None
-  go_next = None
-  go_left = None
-  copy = <Control>c
-  hide_window = None
-  reset = None
-  search = None
-  go_up = None
-  resize_up = None
-  rotate_cw = None
-  split_horiz = None
-  zoom_normal = None
-  go_down = None
-  new_window = None
-  paste = <Control>v
-  edit_window_title = None
-  cycle_next = None
+  layout_launcher = None
   move_tab_left = None
+  move_tab_right = None
+  new_tab = None
+  new_terminator = None
+  new_window = None
+  next_tab = None
+  paste = <Control><Shift>v
+  prev_tab = None
+  reset = None
+  reset_clear = None
+  resize_down = None
+  resize_left = None
+  resize_right = None
+  resize_up = None
+  rotate_ccw = None
+  rotate_cw = None
+  scaled_zoom = None
+  search = None
+  split_horiz = None
+  split_vert = None
   toggle_scrollbar = None
-[profiles]
-  [[default]]
-    palette = "#202020:#990000:#00cd00:#ffff4c:#30309b:#7e40a5:#3579a8:#f0f0f0:#303030:#ff0090:#80ff00:#ffff4c:#5f5fee:#bb88dd:#4eb4fa:#f0f0f0"
-    font = Hack 9
-    visible_bell = True
-    background_image = None
-    urgent_bell = True
-    use_system_font = False
-    cursor_color = "#008d00"
-    foreground_color = "#ffffff"
-    scroll_on_output = False
-    copy_on_selection = True
-    scrollback_infinite = True
+  toggle_zoom = None
+  ungroup_all = None
+  ungroup_tab = None
+  zoom_in = None
+  zoom_normal = None
+  zoom_out = None
 [layouts]
   [[default]]
-    [[[terminal1]]]
-      parent = child1
+    [[[child1]]]
+      parent = window0
       profile = default
       type = Terminal
     [[[window0]]]
-      order = 0
       parent = ""
       type = Window
-[plugins]
+[profiles]
+  [[default]]
+    alternate_screen_scroll = False
+    background_darkness = 0.72
+    background_image = None
+    background_type = transparent
+    copy_on_selection = True
+    cursor_color = "#008d00"
+    font = Droid Sans Mono 9
+    foreground_color = "#ffffff"
+    palette = "#000000:#cd0000:#00cd00:#ffe100:#1933e2:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffe100:#3062e5:#ff00ff:#00ffff:#ffffff"
+    scroll_on_output = False
+    scrollback_infinite = True
+    scrollbar_position = hidden
+    urgent_bell = True
+    use_system_font = False
+    visible_bell = True
