--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,20 +1,42 @@
-##
-#   Configuration for tmux version 2.1+
-##
-
 
 # Set Zsh as the default Tmux shell
 set -g default-shell /bin/zsh
-set -g default-command /bin/zsh
-
 
 # Change Prefix
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# make tmux display things in 256 colors
-set -g default-terminal "screen-#256color"
+unbind c
+
+# utf8 is on
+set -g utf8 on
+set -g status-utf8 on
+
+## address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
+
+## increase scrollback buffer size
+set -g history-limit 50000
+
+## tmux messages are displayed for 4 seconds
+set -g display-time 4000
+
+## refresh 'status-left' and 'status-right' more often
+set -g status-interval 5
+#
+# # upgrade $TERM
+set -g default-terminal "screen-256color"
+
+# # emacs key bindings in tmux command prompt (prefix + :) are better than
+# # vi keys, even for vim users
+#set -g status-keys vi
+
+## focus events enabled for terminals that support them
+set -g focus-events on
+
+## super useful when using "grouped sessions" and multi-monitor setup
+# setw -g aggressive-resize on
 set-option -gw xterm-keys on
 
 # Start Numbering at 1
@@ -150,10 +172,8 @@ set-option -g status-attr dim
 set-option -g status-attr bright
 
 # Window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=yellow]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightyellow]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-format              "#[bg=yellow]#[fg=black] #I:#[bg=cyan]#[fg=colour8] #W #F "
+setw -g window-status-current-format      "#[fg=brightyellow]#[bg=colour8] #I:#[fg=colour8]#[bg=colour14] #W #F"
 setw -g window-status-current-bg colour0
 setw -g window-status-current-fg colour11
 setw -g window-status-current-attr dim
@@ -161,11 +181,42 @@ setw -g window-status-bg green
 setw -g window-status-fg black
 setw -g window-status-attr reverse
 
-# show host name and IP address on left side of status bar
-set -g status-left-length 120
-set -g status-left "#[fg=magenta,bg=black,bold]#(echo ${USER}) #[fg=white]:: #[fg=green]#H"
+## Left Status bar }
+  set -g status-interval 2
+  set -g status-left "#[bg=colour235,fg=white,bold]NET: #[fg=colour214]#{net_speed} #[fg=brightyellow]| #[fg=colour15,bold]CPU: #[fg=colour214]#{cpu_icon} #{cpu_percentage}"
+  set -g status-left-length 120
+# }
 
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 120
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %a %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+
+# tmux-prefix-highlight config {
+  set -g @prefix_highlight_fg 'white'
+  set -g @prefix_highlight_bg 'blue'
+  set -g @prefix_highlight_show_copy_mode 'on'
+  set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
+  set -g @prefix_highlight_output_prefix '< '
+  set -g @prefix_highlight_output_suffix ' >'
+# }
+
+## Plugins from TPM {
+  set -g @plugin 'tmux-plugins/tpm'
+  set -g @plugin 'tmux-plugins/tmux-sensible'
+  set -g @plugin 'tmux-plugins/tmux-copycat'
+  set -g @plugin 'tmux-plugins/tmux-yank'
+  set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+  set -g @plugin 'tmux-plugins/tmux-sidebar'
+  set -g @plugin 'tmux-plugins/tmux-net-speed'
+  set -g @plugin 'tmux-plugins/tmux-cpu'
+# }
+
+# Shell vi mode compatibility
+set -g @shell_mode 'vi'
+
+set -g @sidebar-tree-command 'tree -C'
+
+# Initialize TMUX plugin manager
+run '~/.tmux/plugins/tpm/tpm'
+
