--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -141,7 +141,7 @@ bind -t vi-copy    WheelDownPane page-down
 # panes
  #set pane colors - hilight the active pane
 set -g pane-border-fg black
-set -g pane-active-border-fg brightred
+set -g pane-active-border-fg brightyellow
 #set-option -g pane-border-fg colour235 #base02
 #set-option -g pane-active-border-fg colour240 #base01
 
@@ -171,25 +171,26 @@ set -g status-interval 2
 set-option -g status-attr dim
 set-option -g status-attr bright
 
-# Window status
-setw -g window-status-format              "#[bg=yellow]#[fg=black] #I:#[bg=cyan]#[fg=colour8] #W #F "
-setw -g window-status-current-format      "#[fg=brightyellow]#[bg=colour8] #I:#[fg=colour8]#[bg=colour14] #W #F"
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
+## Window status {
+  setw -g window-status-format "#[bg=yellow]#[fg=black] #I:#[bg=cyan]#[fg=colour8] #W #F "
+  setw -g window-status-current-format "#[fg=brightyellow]#[bg=colour8] #I:#[fg=colour8]#[bg=colour14] #W #F"
+  setw -g window-status-current-bg colour0
+  setw -g window-status-current-fg colour11
+  setw -g window-status-current-attr dim
+  setw -g window-status-bg green
+  setw -g window-status-fg black
+  setw -g window-status-attr reverse
+  setw -g window-status-content-attr bold,blink
+# }
 
-## Left Status bar }
+## Left Status bar {
   set -g status-interval 2
-  set -g status-left "#[bg=colour235,fg=white,bold]NET: #[fg=colour214]#{net_speed} #[fg=brightyellow]| #[fg=colour15,bold]CPU: #[fg=colour214]#{cpu_icon} #{cpu_percentage}"
-  set -g status-left-length 120
+  # set -g status-left "#[bg=colour235,fg=white,bold]NET: #[fg=colour214]#{net_speed} #[fg=green,bg=black]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-left --interval 2 --graph-lines 5 --mem-mode 2)#[default]"
+  set -g status-left "#[fg=green,bg=black]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-left --interval 2 --graph-lines 5 --mem-mode 2)#[default]"
 # }
 
 # show session name, window & pane number, date and time on right side of
 # status bar
-set -g status-right-length 120
 set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %a %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 
 # tmux-prefix-highlight config {
@@ -204,12 +205,13 @@ set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %a %d
 ## Plugins from TPM {
   set -g @plugin 'tmux-plugins/tpm'
   set -g @plugin 'tmux-plugins/tmux-sensible'
+  set -g @plugin 'tmux-plugins/tmux-pain-control'
   set -g @plugin 'tmux-plugins/tmux-copycat'
   set -g @plugin 'tmux-plugins/tmux-yank'
   set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
   set -g @plugin 'tmux-plugins/tmux-sidebar'
   set -g @plugin 'tmux-plugins/tmux-net-speed'
-  set -g @plugin 'tmux-plugins/tmux-cpu'
+  # set -g @plugin 'thewtex/tmux-mem-cpu-load'
 # }
 
 # Shell vi mode compatibility
