--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,8 +10,8 @@ bind C-a send-prefix
 unbind c
 
 # utf8 is on
-set -g utf8 on
-set -g status-utf8 on
+#set -g utf8 on
+#set -g status-utf8 on
 
 ## address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
@@ -61,25 +61,26 @@ set-window-option -g monitor-activity on
 # Renumber windows when a window is closed
 set -g renumber-windows on
 
+set-window-option -g automatic-rename off
+set-option -g allow-rename off
+
 # ---------------------
 # Copy & Paste
 # ---------------------
 # provide access to the clipboard for pbpaste, pbcopy
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
-set-window-option -g automatic-rename off
 # don't rename windows automatically
-set-option -g allow-rename off
 # use vim keybindings in copy mode
-setw -g mode-keys vi
+#setw -g mode-keys vi
 # setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # update default binding of 'Enter' to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+#bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+#bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 
 
 ###
@@ -132,8 +133,8 @@ set -g mouse on
 bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 # Scroll an entire page instead of just a line.
-bind -t vi-copy    WheelUpPane   page-up
-bind -t vi-copy    WheelDownPane page-down
+#bind -t vi-copy    WheelUpPane   page-up
+#bind -t vi-copy    WheelDownPane page-down
 
 # ----------------------
 # set some pretty colors
@@ -180,7 +181,7 @@ set-option -g status-attr bright
   setw -g window-status-bg green
   setw -g window-status-fg black
   setw -g window-status-attr reverse
-  setw -g window-status-content-attr bold,blink
+  #setw -g window-status-content-attr bold,blink
 # }
 
 ## Left Status bar {
@@ -211,7 +212,7 @@ set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %a %d
   set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
   set -g @plugin 'tmux-plugins/tmux-sidebar'
   set -g @plugin 'tmux-plugins/tmux-net-speed'
-  # set -g @plugin 'thewtex/tmux-mem-cpu-load'
+  set -g @plugin 'thewtex/tmux-mem-cpu-load'
 # }
 
 # Shell vi mode compatibility
