--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -93,16 +93,16 @@ bind-key a last-window
 # Reload configuration
 bind r source-file ~/.tmux.conf \; display " Tmux Conf Reloaded!"
 
-bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+#bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
 # Smart pane switching with awareness of vim splits
 # # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+#is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+#bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+#bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+#bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+#bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+#bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Split
 unbind %
@@ -127,6 +127,8 @@ bind L resize-pane -R 5
 # Kill window
 bind X kill-window
 bind Q kill-session
+
+bind C-l send-keys 'C-l'
 
 # Mouse support - set to on if you want to use the mouse
 set -g mouse on
@@ -213,6 +215,7 @@ set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %a %d
   set -g @plugin 'tmux-plugins/tmux-sidebar'
   set -g @plugin 'tmux-plugins/tmux-net-speed'
   set -g @plugin 'thewtex/tmux-mem-cpu-load'
+  set -g @plugin 'christoomey/vim-tmux-navigator'
 # }
 
 # Shell vi mode compatibility
