--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -108,8 +108,8 @@ bind r source-file ~/.tmux.conf \; display " Tmux Conf Reloaded!"
 unbind %
 unbind '"'
 unbind o
-bind \ split-window -h # Split panes horizontal
-bind - split-window -v # Split panes vertically
+bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
+bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
 
 #urxvt tab like window switching (-n: no prior escape seq)
 bind down new-window
