--- a/terminator/config
+++ b/terminator/config
@@ -73,7 +73,7 @@
     cursor_color = "#008d00"
     font = Droid Sans Mono 9
     foreground_color = "#ffffff"
-    palette = "#000000:#cd0000:#00cd00:#ffe100:#1933e2:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffe100:#3062e5:#ff00ff:#00ffff:#ffffff"
+    palette = "#2b2b2b:#cd0000:#00cd00:#ffe100:#1933e2:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffe100:#3062e5:#ff00ff:#00ffff:#ffffff"
     scroll_on_output = False
     scrollback_infinite = True
     scrollbar_position = hidden
