--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-unbind c
+#unbind c
 
 # utf8 is on
 #set -g utf8 on
@@ -30,7 +30,11 @@ set -g default-terminal "screen-256color"
 
 # # emacs key bindings in tmux command prompt (prefix + :) are better than
 # # vi keys, even for vim users
-#set -g status-keys vi
+setw -g status-keys vi
+set -g status-keys vi
+
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
 
 ## focus events enabled for terminals that support them
 set -g focus-events on
@@ -112,7 +116,8 @@ bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
 
 #urxvt tab like window switching (-n: no prior escape seq)
-bind down new-window
+bind down new-window -c '#{pan_current_path}'
+bind c new-window -c '#{pan_current_path}'
 bind left prev
 bind right next
 #bind -n C-left swap-window -t -1
@@ -128,7 +133,7 @@ bind L resize-pane -R 5
 bind X kill-window
 bind Q kill-session
 
-bind C-l send-keys 'C-l'
+#bind C-l send-keys 'C-l'
 
 # Mouse support - set to on if you want to use the mouse
 set -g mouse on
@@ -205,6 +210,7 @@ set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %a %d
   set -g @prefix_highlight_output_suffix ' >'
 # }
 
+
 ## Plugins from TPM {
   set -g @plugin 'tmux-plugins/tpm'
   set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -212,17 +218,17 @@ set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %a %d
   set -g @plugin 'tmux-plugins/tmux-copycat'
   set -g @plugin 'tmux-plugins/tmux-yank'
   set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-  set -g @plugin 'tmux-plugins/tmux-sidebar'
-  set -g @plugin 'tmux-plugins/tmux-net-speed'
-  set -g @plugin 'thewtex/tmux-mem-cpu-load'
+  #set -g @plugin 'tmux-plugins/tmux-sidebar'
+  #set -g @plugin 'tmux-plugins/tmux-net-speed'
+  #set -g @plugin 'thewtex/tmux-mem-cpu-load'
   set -g @plugin 'christoomey/vim-tmux-navigator'
 # }
 
 # Shell vi mode compatibility
 set -g @shell_mode 'vi'
 
-set -g @sidebar-tree-command 'tree -C'
+#set -g @sidebar-tree-command 'tree -C'
 
 # Initialize TMUX plugin manager
-run '~/.tmux/plugins/tpm/tpm'
+run-shell '~/.tmux/plugins/tpm/tpm'
 
