--- a/terminator/config
+++ b/terminator/config
@@ -1,59 +1,68 @@
 [global_config]
-  borderless = True
-  enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
-  suppress_multiple_term_dialog = False
-  title_hide_sizetext = False
-  title_use_system_font = False
+    borderless = True
+    enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+    suppress_multiple_term_dialog = False
+    title_hide_sizetext = False
+    title_use_system_font = False
+    title_transmit_bg_color = "#be5046"
+    focus = system
+    scroll_on_output = False
+    scrollback_infinite = True
+    scrollbar_position = hidden
+    urgent_bell = True
+    use_system_font = False
+    visible_bell = True
+    force_no_bell=True
 [keybindings]
-  broadcast_all = None
-  broadcast_group = None
-  broadcast_off = None
-  close_term = None
-  close_window = None
-  copy = <Control><Shift>c
-  cycle_next = None
-  cycle_prev = None
-  edit_window_title = None
-  full_screen = None
-  go_down = None
-  go_left = None
-  go_next = None
-  go_prev = None
-  go_right = None
-  go_up = None
-  group_all = None
-  group_tab = None
-  hide_window = None
-  insert_number = None
-  insert_padded = None
-  layout_launcher = None
-  move_tab_left = None
-  move_tab_right = None
-  new_tab = None
-  new_terminator = None
-  new_window = None
-  next_tab = None
-  paste = <Control><Shift>v
-  prev_tab = None
-  reset = None
-  reset_clear = None
-  resize_down = None
-  resize_left = None
-  resize_right = None
-  resize_up = None
-  rotate_ccw = None
-  rotate_cw = None
-  scaled_zoom = None
-  search = None
-  split_horiz = None
-  split_vert = None
-  toggle_scrollbar = None
-  toggle_zoom = None
-  ungroup_all = None
-  ungroup_tab = None
-  zoom_in = None
-  zoom_normal = None
-  zoom_out = None
+    broadcast_all = None
+    broadcast_group = None
+    broadcast_off = None
+    close_term = None
+    close_window = None
+    copy = <Control><Shift>c
+    cycle_next = None
+    cycle_prev = None
+    edit_window_title = None
+    full_screen = None
+    go_down = None
+    go_left = None
+    go_next = None
+    go_prev = None
+    go_right = None
+    go_up = None
+    group_all = None
+    group_tab = None
+    hide_window = None
+    insert_number = None
+    insert_padded = None
+    layout_launcher = None
+    move_tab_left = None
+    move_tab_right = None
+    new_tab = None
+    new_terminator = None
+    new_window = None
+    next_tab = None
+    paste = <Control><Shift>v
+    prev_tab = None
+    reset = None
+    reset_clear = None
+    resize_down = None
+    resize_left = None
+    resize_right = None
+    resize_up = None
+    rotate_ccw = None
+    rotate_cw = None
+    scaled_zoom = None
+    search = None
+    split_horiz = None
+    split_vert = None
+    toggle_scrollbar = None
+    toggle_zoom = None
+    ungroup_all = None
+    ungroup_tab = None
+    zoom_in = None
+    zoom_normal = None
+    zoom_out = None
 [layouts]
   [[default]]
     [[[child1]]]
@@ -64,20 +73,60 @@
       parent = ""
       type = Window
 [profiles]
-  [[default]]
-    alternate_screen_scroll = False
-    background_darkness = 0.9
-    background_image = None
-    background_type = transparent
-    copy_on_selection = True
-    cursor_color = "#008d00"
-    font = Droid Sans Mono 9
-    foreground_color = "#ffffff"
-    palette = "#0f0f0f:#cd0000:#00cd00:#ffe100:#1933e2:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffe100:#3062e5:#ff00ff:#00ffff:#ffffff"
-    scroll_on_output = False
-    scrollback_infinite = True
-    scrollbar_position = hidden
-    urgent_bell = True
-    use_system_font = False
-    visible_bell = True
-    force_no_bell=True
+    [[monokai-klpanagi]]
+        cursor_color = "#008d00"
+        foreground_color = "#ffffff"
+        palette = "#0f0f0f:#cd0000:#00cd00:#ffe100:#1933e2:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffe100:#3062e5:#ff00ff:#00ffff:#ffffff"
+        alternate_screen_scroll = False
+        background_darkness = 0.9
+        background_image = None
+        background_type = transparent
+        copy_on_selection = True
+
+    [[one-dark]]
+        alternate_screen_scroll = False
+        background_image = None
+        copy_on_selection = True
+        font = Droid Sans Mono 9
+        palette = "#272B33:#e06c75:#98c379:#d19a66:#61afef:#c678dd:#56b6c2:#abb2c0:#272B33:#e5c07b:#5c6370:#828997:#abb2bf:#c678dd:#abb2bf:#abb2c0"
+        foreground_color = "#abb2c0"
+        background_color = "#272B33"
+        cursor_color = "#abb2c0"
+
+    [[molokai]] # Molokai
+        scrollbar_position = hidden
+        palette = "#181915:#7a0137:#498702:#c5bb63:#3465a4:#75507b:#4194b0:#d3d7cf:#45473c:#e00265:#6dca04:#e6db74:#1d71ca:#af5fff:#5cd1f8:#ffffff"
+        use_system_font = False
+        cursor_color = "#c20257"
+        foreground_color = "#ffffff"
+        show_titlebar = False
+        font = DejaVu Sans Mono 9
+        background_color = "#121212"
+        scrollback_infinite = True
+
+    [[Duotone Dark]] # Duotone Dark
+        palette = "#1f1d27:#d9393e:#2dcd73:#d9b76e:#ffc284:#de8d40:#2488ff:#b7a1ff:#353147:#d9393e:#2dcd73:#d9b76e:#ffc284:#de8d40:#2488ff:#eae5ff"
+        background_color = "#1f1d27"
+        cursor_color = "#ff9839"
+        foreground_color = "#b7a1ff"
+        background_image = None
+
+    [[monokai-soda]] # Monokai Soda
+        palette = "#1a1a1a:#f4005f:#98e024:#fa8419:#9d65ff:#f4005f:#58d1eb:#c4c5b5:#625e4c:#f4005f:#98e024:#e0d561:#9d65ff:#f4005f:#58d1eb:#f6f6ef"
+        background_color = "#1a1a1a"
+        cursor_color = "#f6f7ec"
+        foreground_color = "#c4c5b5"
+        background_image = None
+
+    [[monokai-vivid]]  # Monokai Vivid
+        palette = "#121212:#fa2934:#98e123:#fff30a:#0443ff:#f800f8:#01b6ed:#ffffff:#838383:#f6669d:#b1e05f:#fff26d:#0443ff:#f200f6:#51ceff:#ffffff"
+        background_color = "#121212"
+        cursor_color = "#fb0007"
+        foreground_color = "#f9f9f9"
+        background_image = None
+
+    [[default]] # Monokai
+        palette = "#272822:#f92672:#a6e22e:#f4bf75:#66d9ef:#ae81ff:#a1efe4:#f8f8f2:#75715e:#f92672:#a6e22e:#f4bf75:#66d9ef:#ae81ff:#a1efe4:#f9f8f5"
+        foreground_color = "#f8f8f2"
+        background_color = "#1a1a1a"
+        cursor_color = "#f8f8f2"
