--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,10 +8,8 @@ set -g default-shell /bin/zsh
   bind C-a send-prefix
 # }
 
-#unbind c
-# utf8 is on
-#set -g utf8 on
-#set -g status-utf8 on
+# Default terminal is 256 colors
+#set -g default-terminal "screen-256color"
 
 ## address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
@@ -25,8 +23,6 @@ set -g display-time 2000
 ## refresh 'status-left' and 'status-right' more often
 set -g status-interval 3
 #
-# # upgrade $TERM
-set -g default-terminal "screen-256color"
 
 # # emacs key bindings in tmux command prompt (prefix + :) are better than
 # # vi keys, even for vim users
@@ -189,8 +185,15 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 #set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 # }
+
+# # upgrade $TERM
+# Default terminal is 256 colors
+set -g default-terminal "screen-256color"
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 
 # Initialize TMUX plugin manager
 run-shell '~/.tmux/plugins/tpm/tpm'
-
