Lower interval time

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ set -g history-limit 50000
 set -g display-time 2000
 
 ## refresh 'status-left' and 'status-right' more often
-set -g status-interval 3
+set -g status-interval 1
 
 setw -g status-keys vi
 set -g status-keys vi
@@ -167,7 +167,7 @@ set -g window-status-format "#[fg=$onedark_black,bg=$onedark_black,nobold,nounde
 set -g window-status-current-format "#[fg=$onedark_black,bg=$onedark_visual_grey,nobold,nounderscore,noitalics]#[fg=$onedark_white,bg=$onedark_visual_grey,bold] #I  #W #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]"
 
 set -g status-left "#[fg=$onedark_visual_grey,bg=$onedark_green,bold] #S #{prefix_highlight}#[fg=$onedark_green,bg=$onedark_black,nobold,nounderscore,noitalics] $seperator#[fg=$onedark_white,bg=$onedark_visual_grey,bold] #(whoami) #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]$seperator #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #H #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]$seperator #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #I:#P #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore]#[fg=$onedark_visual_grey,bg=$onedark_visual_grey,nounderscore,nobold,noitalics] #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #{ipinfo}  #{free_mem}  #{uptime}"
+set -g status-right "#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore]#[fg=$onedark_visual_grey,bg=$onedark_visual_grey,nounderscore,nobold,noitalics] #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #{ipinfo}  #{free_mem}"
 # -------------------------}
 
 # upgrade $TERM
