Remove some plugins

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -187,14 +187,14 @@ set -g @yank_selection 'primary'
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 #set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 #set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 #set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'odedlaz/tmux-status-variables'
-set -g @plugin 'tmux-plugins/tmux-urlview'
+# set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-open'
 # ---------------------------------}
 
