--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,7 +30,7 @@ set -g focus-events on
 
 ## super useful when using "grouped sessions" and multi-monitor setup
 # setw -g aggressive-resize on
-set-option -gw xterm-keys on
+set-window-option -g xterm-keys on
 
 # Start Numbering at 1
 set -g base-index 1
@@ -78,6 +78,9 @@ bind ^A select-pane -t :.+
 unbind %
 unbind '"'
 unbind o
+unbind n
+unbind p
+
 bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
 
@@ -86,8 +89,8 @@ bind down new-window -c '#{pan_current_path}'
 bind c new-window -c '#{pan_current_path}'
 bind left prev
 bind right next
-#bind -n C-left swap-window -t -1
-#bind -n C-right swap-window -t +1
+bind n swap-window -t -1
+bind p swap-window -t +1
 
 # Resize
 bind H resize-pane -L 5
