Fix Ctrl xterm keys

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -78,8 +78,8 @@ bind ^A select-pane -t :.+
 unbind %
 unbind '"'
 unbind o
-unbind n
-unbind p
+# unbind n
+# unbind p
 
 bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
@@ -89,8 +89,8 @@ bind down new-window -c '#{pan_current_path}'
 bind c new-window -c '#{pan_current_path}'
 bind left prev
 bind right next
-bind n swap-window -t -1
-bind p swap-window -t +1
+# bind -n C-left swap-window -t -1
+# bind -n C-right swap-window -t +1
 
 # Resize
 bind H resize-pane -L 5
