--- a/weechat/buffers.conf
+++ b/weechat/buffers.conf
@@ -10,7 +10,7 @@
 #
 
 [color]
-current_bg = red
+current_bg = darkgray
 current_fg = lightcyan
 default_bg = default
 default_fg = default
@@ -19,12 +19,12 @@ hotlist_highlight_fg = magenta
 hotlist_low_bg = default
 hotlist_low_fg = white
 hotlist_message_bg = default
-hotlist_message_fg = yellow
+hotlist_message_fg = purple
 hotlist_private_bg = default
 hotlist_private_fg = lightgreen
 none_channel_bg = default
 none_channel_fg = default
-number = lightgreen
+number = yellow
 number_char = lightgreen
 prefix_bufname = default
 queries_default_bg = default
@@ -55,9 +55,9 @@ detach_displayed_buffers = on
 detach_free_content = off
 detach_query = off
 hide_merged_buffers = none
-hotlist_counter = off
+hotlist_counter = on
 immune_detach_buffers = ""
-indenting = off
+indenting = on
 indenting_amount = 2
 indenting_number = on
 jump_prev_next_visited_buffer = off
@@ -75,6 +75,6 @@ short_names = on
 show_lag = off
 show_number = on
 sort = number
-suffix_bufname = ""
+suffix_bufname = " "
 toggle_bar = on
 whitelist_buffers = ""
