--- a/weechat/trigger.conf
+++ b/weechat/trigger.conf
@@ -49,6 +49,14 @@ cmd_pass_register.hook = modifier
 cmd_pass_register.post_action = none
 cmd_pass_register.regex = "==^(/(msg|m|quote) +nickserv +register +)([^ ]+)(.*)==${re:1}${hide:*,${re:3}}${re:4}"
 cmd_pass_register.return_code = ok
+highmon.arguments = ""
+highmon.command = "/print -buffer exec.highlights -tags notify_none,no_highlight ${buffer.name}\t${tg_prefix}${color:default}: ${tg_message}"
+highmon.conditions = "${tg_highlight} == 1 && ${tg_displayed} == 1 && ${buffer.notify} > 0"
+highmon.enabled = on
+highmon.hook = print
+highmon.post_action = none
+highmon.regex = ""
+highmon.return_code = ok
 msg_auth.arguments = "5000|irc_message_auth"
 msg_auth.command = ""
 msg_auth.conditions = ""
