--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -12,7 +12,7 @@
 [debug]
 
 [startup]
-command_after_plugins = ""
+command_after_plugins = "/exec -nosw -nosh -norc -buffer highlights true;/command -buffer exec.highlights core /buffer set time_for_each_line 1"
 command_before_plugins = ""
 display_logo = on
 display_version = on
@@ -34,7 +34,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = prefix_message
-buffer_time_format = "%H:%M:%S"
+buffer_time_format = "${color:252}%H${color:245}:%M${color:240}:%S"
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -76,7 +76,7 @@ input_share = none
 input_share_overwrite = off
 input_undo_max = 32
 item_away_message = on
-item_buffer_filter = "*"
+item_buffer_filter = "⚑"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
 item_time_format = "%H:%M"
@@ -96,7 +96,7 @@ paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
-prefix_action = " *"
+prefix_action = "⚡"
 prefix_align = right
 prefix_align_max = 0
 prefix_align_min = 0
@@ -106,25 +106,25 @@ prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = on
-prefix_error = "=!="
-prefix_join = "-->"
-prefix_network = "--"
-prefix_quit = "<--"
+prefix_error = "⚠"
+prefix_join = "→"
+prefix_network = "ℹ "
+prefix_quit = "←"
 prefix_same_nick = "⤷"
-prefix_suffix = "|"
+prefix_suffix = "│"
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
 quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "- "
+read_marker_string = "─"
 save_config_on_exit = on
-save_layout_on_exit = none
+save_layout_on_exit = all
 scroll_amount = 3
 scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
-separator_horizontal = "-"
+separator_horizontal = "—"
 separator_vertical = ""
 tab_width = 1
 time_format = "%a, %d %b %Y %T"
@@ -164,7 +164,7 @@ chat_host = cyan
 chat_inactive_buffer = default
 chat_inactive_window = default
 chat_nick = lightcyan
-chat_nick_colors = "cyan,magenta,green,brown,lightblue,default,lightcyan,lightmagenta,lightgreen,blue"
+chat_nick_colors = "red,green,brown,blue,magenta,cyan,white,lightred,lightgreen,yellow,lightblue,lightmagenta,lightcyan"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
@@ -288,7 +288,7 @@ buflist.color_fg = default
 buflist.conditions = ""
 buflist.filling_left_right = vertical
 buflist.filling_top_bottom = columns_vertical
-buflist.hidden = off
+buflist.hidden = on
 buflist.items = "buflist"
 buflist.position = left
 buflist.priority = 0
@@ -307,8 +307,8 @@ input.items = "[mode_indicator]+[buffer_name]+[input_prompt]+(away),[input_searc
 input.position = bottom
 input.priority = 1000
 input.separator = off
-input.size = 1
-input.size_max = 0
+input.size = 0
+input.size_max = 3
 input.type = root
 isetbar.color_bg = default
 isetbar.color_delim = cyan
@@ -345,15 +345,15 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "[time],[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_filter,[bitlbee_typing_notice],[lag],[aspell_dict],[aspell_suggest],completion,scroll"
+status.items = "[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+{buffer_nicklist_count}+buffer_filter,[lag],[hotlist],completion,scroll"
 status.position = bottom
 status.priority = 500
 status.separator = on
 status.size = 1
 status.size_max = 0
 status.type = root
-title.color_bg = 31
-title.color_delim = cyan
+title.color_bg = yellow
+title.color_delim = default
 title.color_fg = black
 title.conditions = "${inactive}"
 title.filling_left_right = vertical
@@ -361,7 +361,7 @@ title.filling_top_bottom = horizontal
 title.hidden = off
 title.items = "buffer_title"
 title.position = top
-title.priority = 500
+title.priority = 0
 title.separator = off
 title.size = 1
 title.size_max = 0
@@ -397,10 +397,9 @@ vi_line_numbers.type = window
 
 [layout]
 highlight.buffer = "core;weechat;1"
-highlight.buffer = "perl;highmon;2"
-highlight.buffer = "irc;server.freenode;3"
-highlight.buffer = "irc;freenode.#archlinux-newbies;4"
-highlight.window = "1;0;13;1;-;-"
+highlight.buffer = "exec;exec.highlights;2"
+highlight.buffer = "perl;highmon;3"
+highlight.window = "1;0;20;1;-;-"
 highlight.window = "2;1;0;0;core;weechat"
 highlight.window = "3;1;0;0;perl;highmon"
 highlight.current = on
@@ -523,7 +522,7 @@ meta2-Z = "/input complete_previous"
 meta2-[E = "/buffer -1"
 meta-_ = "/input redo"
 meta-a = "/input jump_smart"
-meta-b = "/input move_previous_word"
+meta-b = "/bar toggle buffers"
 meta-d = "/input delete_next_word"
 meta-f = "/input move_next_word"
 meta-h = "/input hotlist_clear"
