--- a/weechat/buflist.conf
+++ b/weechat/buflist.conf
@@ -10,9 +10,8 @@
 #
 
 [look]
-auto_scroll = 50
 display_conditions = "on"
-enabled = on
+enabled = off
 mouse_jump_visited_buffer = off
 mouse_move_buffer = on
 mouse_wheel = on
@@ -22,8 +21,8 @@ signals_refresh = ""
 sort = "irc_server.disconnected,number"
 
 [format]
-buffer = "${format_number}${indent}${format_name}${format_hotlist} ${color:31}${buffer.local_variables.iset_filter}${buffer.local_variables.buflist}"
-buffer_current = "${if:${type}==server?${color:*white,31}:${color:*white}}${hide:>,${buffer[last_gui_buffer].number}} ${indent}${if:${type}==server&&${info:irc_server_isupport_value,${name},NETWORK}?${info:irc_server_isupport_value,${name},NETWORK}:${name}} ${color:31}${buffer.local_variables.iset_filter}${buffer.local_variables.buflist}"
+buffer = "${format_number}${indent}${format_name}${format_hotlist} ${color:31}${buffer.local_variables.filter}${buffer.local_variables.buflist}"
+buffer_current = "${if:${type}==server?${color:*white,31}:${color:*white}}${hide:>,${buffer[last_gui_buffer].number}} ${indent}${if:${type}==server&&${info:irc_server_isupport_value,${name},NETWORK}?${info:irc_server_isupport_value,${name},NETWORK}:${name}} ${color:31}${buffer.local_variables.filter}${buffer.local_variables.buflist}"
 hotlist = " ${color:239}${hotlist}${color:239}"
 hotlist_highlight = "${color:163}"
 hotlist_low = "${color:white}"
@@ -33,6 +32,5 @@ hotlist_private = "${color:121}"
 hotlist_separator = "${color:default},"
 indent = " "
 lag = " ${color:green}[${color:brown}${lag}${color:green}]"
-name = "${if:${type}==server?${color:white}:${color_hotlist}}${if:${type}==server||${type}==channel||${type}==private?${if:${cutscr:8,+,${name}}!=${name}?${cutscr:8,${color:${weechat.color.chat_prefix_more}}+,${if:${type}==server&&${info:irc_server_isupport_value,${name},NETWORK}?${info:irc_server_isupport_value,${name},NETWORK}:${name}}}:${cutscr:8, ,${if:${type}==server&&${info:irc_server_isupport_value,${name},NETWORK}?${info:irc_server_isupport_value,${name},NETWORK}                              :${name}                              }}}:${name}}"
 nick_prefix = "${color_nick_prefix}${nick_prefix}"
 number = "${if:${type}==server?${color:black,31}:${color:239}}${number}${if:${number_displayed}?.: }"
