--- a/weechat/plugins.conf
+++ b/weechat/plugins.conf
@@ -14,9 +14,11 @@ lua.check_license = "off"
 perl.check_license = "off"
 perl.highmon.alignment = "nchannel"
 perl.highmon.away_only = "off"
+perl.highmon.bar_lines = "100"
+perl.highmon.bar_scrolldown = "on"
 perl.highmon.color_buf = "on"
 perl.highmon.first_run = "true"
-perl.highmon.hotlist_show = "off"
+perl.highmon.hotlist_show = "on"
 perl.highmon.logging = "off"
 perl.highmon.merge_private = "off"
 perl.highmon.nick_prefix = "<"
@@ -37,6 +39,12 @@ perl.pushover.sound = ""
 perl.pushover.token = "ajEX9RWhxs6NgeXFJxSK2jmpY54C9S"
 perl.pushover.user = ""
 perl.pushover.verbose = "1"
+perl.recoverop.regex = "\A(freenode\.#klpanagi)\Z"
+python.autojoin_on_invite.autojoin_key = "on"
+python.autojoin_on_invite.ignore_channels = ""
+python.autojoin_on_invite.ignore_nicks = ""
+python.autojoin_on_invite.whitelist_channels = ""
+python.autojoin_on_invite.whitelist_nicks = ""
 python.buffer_autoclose.age_limit = "30"
 python.buffer_autoclose.ignore = ""
 python.buffer_autoclose.interval = "1"
@@ -68,6 +76,27 @@ python.inotify.ignore_text = ""
 python.inotify.passwd = ""
 python.inotify.server_method = "any"
 python.inotify.server_uri = "http://localhost:7766"
+python.notify_send.ellipsis = "[..]"
+python.notify_send.escape_html = "on"
+python.notify_send.icon = "/usr/share/icons/hicolor/32x32/apps/weechat.png"
+python.notify_send.ignore_buffers = ""
+python.notify_send.ignore_buffers_starting_with = ""
+python.notify_send.ignore_messages_tagged_with = "irc_join,irc_quit,irc_part,irc_status,irc_nick_back,irc_401,irc_402"
+python.notify_send.ignore_nicks = ""
+python.notify_send.ignore_nicks_starting_with = ""
+python.notify_send.max_length = "72"
+python.notify_send.min_notification_delay = "500"
+python.notify_send.nick_separator = ": "
+python.notify_send.notify_for_current_buffer = "on"
+python.notify_send.notify_on_all_messages_in_buffers = ""
+python.notify_send.notify_on_filtered_messages = "off"
+python.notify_send.notify_on_highlights = "on"
+python.notify_send.notify_on_privmsgs = "on"
+python.notify_send.notify_when_away = "on"
+python.notify_send.timeout = "5000"
+python.notify_send.transient = "on"
+python.notify_send.urgency = "normal"
+python.text_item.hilight_monitor_title_text = "all "[Hilight Monitor]""
 python.urlserver.buffer_short_name = "off"
 python.urlserver.color = "darkgray"
 python.urlserver.color_in_msg = ""
@@ -135,6 +164,26 @@ python.go.message = "message to display before list of buffers (default: "Go to:
 python.go.short_name = "display and search in short names instead of buffer name (default: "off")"
 python.go.sort = "comma-separated list of keys to sort buffers (the order is important, sorts are performed in the given order): name = sort by name (or short name),  (default: "number,beginning")"
 python.go.use_core_instead_weechat = "use name "core" instead of "weechat" for core buffer (default: "off")"
+python.notify_send.ellipsis = "Ellipsis to be used for notifications that are too long. Default: [..]."
+python.notify_send.escape_html = "Escapes the '<', '>', and '&' characters in notification messages. Default: on."
+python.notify_send.icon = "Path to an icon to be shown in notifications. Default: /usr/share/icons/hicolor/32x32/apps/weechat.png."
+python.notify_send.ignore_buffers = "A comma-separated list of buffers from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_buffers_starting_with = "A comma-separated list of buffer prefixes from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_messages_tagged_with = "A comma-separated list of message tags for which no notifications should be shown. Default: irc_join,irc_quit,irc_part,irc_status,irc_nick_back,irc_401,irc_402."
+python.notify_send.ignore_nicks = "A comma-separated list of nicks from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_nicks_starting_with = "A comma-separated list of nick prefixes from which no notifications should be shown. Default: ""."
+python.notify_send.max_length = "Maximal length of a notification (0 means no limit). Default: 72."
+python.notify_send.min_notification_delay = "A minimal delay between successive notifications from the same buffer (in milliseconds; set to 0 to show all notifications). Default: 500."
+python.notify_send.nick_separator = "A separator between a nick and a message. Default: : ."
+python.notify_send.notify_for_current_buffer = "Send also notifications for the currently active buffer. Default: on."
+python.notify_send.notify_on_all_messages_in_buffers = "A comma-separated list of buffers for which you want to receive notifications on all messages that appear in them. Default: ""."
+python.notify_send.notify_on_filtered_messages = "Send notifications also on filtered (hidden) messages. Default: off."
+python.notify_send.notify_on_highlights = "Send notifications on highlights. Default: on."
+python.notify_send.notify_on_privmsgs = "Send notifications on private messages. Default: on."
+python.notify_send.notify_when_away = "Send also notifications when away. Default: on."
+python.notify_send.timeout = "Time after which the notification disappears (in milliseconds; set to 0 to disable). Default: 5000."
+python.notify_send.transient = "When a notification expires or is dismissed, remove it from the notification bar. Default: on."
+python.notify_send.urgency = "Urgency (low, normal, critical). Default: normal."
 python.urlserver.buffer_short_name = "use buffer short name on dedicated buffer (default: "off")"
 python.urlserver.color = "color for urls displayed after message (default: "darkgray")"
 python.urlserver.color_in_msg = "color for urls displayed inside irc message: it is a number (irc color) between 00 and 15 (see doc for a list of irc colors) (default: "")"
