--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -127,7 +127,7 @@ local_hostname = ""
 msg_kick = ""
 msg_part = "WeeChat ${info:version}"
 msg_quit = "WeeChat ${info:version}"
-nicks = "klpanagi,klpanagi1,klpanagi2,klpanagi3,klpanagi4"
+nicks = "klpanagi"
 nicks_alternate = on
 notify = ""
 password = ""
@@ -189,3 +189,43 @@ freenode.msg_kick
 freenode.msg_part
 freenode.msg_quit
 freenode.notify
+subhacker.addresses = "irc.subhacker.net/6697"
+subhacker.proxy
+subhacker.ipv6
+subhacker.ssl = on
+subhacker.ssl_cert
+subhacker.ssl_priorities
+subhacker.ssl_dhkey_size
+subhacker.ssl_fingerprint
+subhacker.ssl_verify = off
+subhacker.password
+subhacker.capabilities
+subhacker.sasl_mechanism
+subhacker.sasl_username = "klpanagi"
+subhacker.sasl_password = "${sec.data.subhacker_password}"
+subhacker.sasl_key
+subhacker.sasl_timeout
+subhacker.sasl_fail
+subhacker.autoconnect = on
+subhacker.autoreconnect
+subhacker.autoreconnect_delay
+subhacker.nicks
+subhacker.nicks_alternate
+subhacker.username
+subhacker.realname
+subhacker.local_hostname
+subhacker.usermode
+subhacker.command
+subhacker.command_delay
+subhacker.autojoin
+subhacker.autorejoin
+subhacker.autorejoin_delay
+subhacker.connection_timeout
+subhacker.anti_flood_prio_high
+subhacker.anti_flood_prio_low
+subhacker.away_check
+subhacker.away_check_max_nicks
+subhacker.msg_kick
+subhacker.msg_part
+subhacker.msg_quit
+subhacker.notify
