--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -399,8 +399,12 @@ vi_line_numbers.type = window
 highlight.buffer = "core;weechat;1"
 highlight.buffer = "exec;exec.highlights;2"
 highlight.buffer = "perl;highmon;3"
+highlight.buffer = "perl;iset;4"
+highlight.buffer = "irc;server.subhacker;5"
+highlight.buffer = "irc;subhacker.#coding;6"
+highlight.buffer = "irc;subhacker.#Polls;7"
 highlight.window = "1;0;20;1;-;-"
-highlight.window = "2;1;0;0;core;weechat"
+highlight.window = "2;1;0;0;irc;subhacker.#Polls"
 highlight.window = "3;1;0;0;perl;highmon"
 highlight.current = on
 
