Fixes End-Home keys

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -176,7 +176,7 @@ set -g status-right "#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalic
 # upgrade $TERM
 # Default terminal is 256 colors
 #set -g default-terminal "screen-256color"
-set -g default-terminal "tmux-256color"  # As of TMux 2.1
+set -g default-terminal "screen-256color"  # Tested with tmux 2.5
 
 # Add truecolor support
 # tmux supports 24-bit color as of version 2.2:
